k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: connect-client
  template:
    metadata:
      labels:
        app: connect-client
    spec:
      containers:
        - name: connect-client
          image: dockerx2000/connect_client
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: connect-client
  ports:
    - name: connect-client
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
