k8s/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: connect-nginx
  template:
    metadata:
      labels:
        app: connect-nginx
    spec:
      containers:
        - name: connect-nginx
          image: dockerx2000/connect_nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: connect-nginx
  ports:
    - name: connect-nginx
      protocol: TCP
      port: 80
      targetPort: 80 
  type: LoadBalancer
