k8s/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: connect-server
  template:
    metadata:
      labels:
        app: connect-server
    spec:
      containers:
        - name: connect-server
          image: dockerx2000/connect_server
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app: connect-server
  ports:
    - name: connect-server
      protocol: "TCP"
      port: 5000
      targetPort: 5000
  type: LoadBalancer
